--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/job-letter-logo.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,8 +11,8 @@
       name="description"
       content="Web site created using create-react-app"
       />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>React App</title>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/job-letter-logo.png" />
+    <title>Job Letter</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
