--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       content="Web site created using create-react-app"
       />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/job-letter-logo.png" />
+    <script defer src="%PUBLIC_URL%/gtag.js"></script>
     <title>Job Letter</title>
   </head>
   <body>
