--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,34 @@
       />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/job-letter-logo.png" />
     <script defer src="%PUBLIC_URL%/gtag.js"></script>
+
+    <!-- Other meta tags (like charset, viewport, etc.) -->
+
+    <!-- Basic Meta Tags -->
+    <meta name="title" content="Write cold message using ChatGPT">
+    <meta name="description" content="Craft job hunt cold emails in seconds -
+      land your dream job with ease! Tailor based on your own experience and job
+      description">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url"
+      content="https://https://georgialin.github.io/job-letter/">
+    <meta property="og:title" content="Write cold message using ChatGPT">
+    <meta property="og:description" content="Craft job hunt cold emails in
+      seconds -
+      land your dream job with ease! Tailor based on your own experience and job
+      description">
+    <meta property="og:image" content="%PUBLIC_URL%/preview.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url"
+      content="https://https://georgialin.github.io/job-letter/">
+    <meta property="twitter:title" content="Write cold message using ChatGPT">
+    <meta property="twitter:description" content="A brief description of your
+      website">
+    <meta property="twitter:image" content="%PUBLIC_URL%/preview.png">
     <title>Job Letter</title>
   </head>
   <body>
