meta preview fixed bug

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url"
-      content="https://https://georgialin.github.io/job-letter/">
+      content="https://georgialin.github.io/job-letter/">
     <meta property="og:title" content="Write cold message using ChatGPT">
     <meta property="og:description" content="Craft job hunt cold emails in
       seconds -
@@ -36,7 +36,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url"
-      content="https://https://georgialin.github.io/job-letter/">
+      content="https://georgialin.github.io/job-letter/">
     <meta property="twitter:title" content="Write cold message using ChatGPT">
     <meta property="twitter:description" content="A brief description of your
       website">
