meta preview fixed bug 2

--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,10 @@
     <meta property="twitter:url"
       content="https://georgialin.github.io/job-letter/">
     <meta property="twitter:title" content="Write cold message using ChatGPT">
-    <meta property="twitter:description" content="A brief description of your
-      website">
+    <meta property="twitter:description" content="Craft job hunt cold emails in
+      seconds -
+      land your dream job with ease! Tailor based on your own experience and job
+      description">
     <meta property="twitter:image" content="%PUBLIC_URL%/preview.png">
     <title>Job Letter</title>
   </head>
